src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/LongOptionNameStartWithDigit/Test_1.Output.verified.txt
Error: Invalid long option name.

       dog --1foo
           ^^^^^^ Option names cannot start with a digit